adjust file name

--- a/assets/scss/_custom.scss
+++ b/assets/scss/_custom.scss
@@ -166,7 +166,7 @@ $color-data-explorer: #0A408A;
 }
 
 .overlay-map {
-  background-image: url('../images/overlay_trend.png');
+  background-image: url('../images/overlay_map.png');
   background-size: cover;
   z-index: 100;
   position: absolute;
