font awesome replacement

--- a/themes/dohmh/layouts/data-stories/section.html
+++ b/themes/dohmh/layouts/data-stories/section.html
@@ -43,7 +43,7 @@
                     <h3 class="card-title"><a class="text-black" href="{{ .RelPermalink }}" class="text-primary">{{ .Title }}</a></h3>
                     <div class="mb-2">{{ .Content | truncate 100 | plainify }}</div>
                     <div class="d-flex justify-content-end link">
-                        <a class="fs-sm font-weight-bold" href="{{ .RelPermalink }}">Read more &gt;</a>
+                        <a class="fs-sm font-weight-bold" href="{{ .RelPermalink }}">Read more <i class="fa-solid fa-angle-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -106,7 +106,7 @@
                                     <h3 class="card-title"><a class="text-black" href="{{ .RelPermalink }}" class="text-primary">{{ .Title }}</a></h3>
                                     <div class="mb-2">{{ .Content | truncate 100 | plainify }}</div>
                                     <div class="d-flex justify-content-end link">
-                                        <a class="fs-sm font-weight-bold" href="{{ .RelPermalink }}">Read more &gt;</a>
+                                        <a class="fs-sm font-weight-bold" href="{{ .RelPermalink }}">Read more <i class="fa-solid fa-angle-right"></i></a>
                                     </div>
                                 </div>
                             </div>
