NR selection: hide map on small screens

--- a/themes/dohmh/layouts/neighborhood-reports/section.html
+++ b/themes/dohmh/layouts/neighborhood-reports/section.html
@@ -92,7 +92,7 @@
                 <ul class="list-unstyled p-2 border border-top-0 border-primary neighborhood-list" id="neighborhoodList2"></ul>
               </div>
             </div>
-            <div class="col-md-7">
+            <div class="col-md-7 d-none d-md-block">
               <div class="nr-clickable-uhf" style="height:550px" aria-hidden="true">
                 {{- partial "nr-clickable-uhf" . -}}
               </div>
