--- a/themes/dohmh/layouts/data-stories/section.html
+++ b/themes/dohmh/layouts/data-stories/section.html
@@ -58,7 +58,7 @@
     </div>
 
     <div class="row mt-4">
-        <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+        <ul class="nav nav-pills mb-3 border-bottom" id="pills-tab" role="tablist">
             <li class="nav-item">
               <a class="nav-link" id="pills-aq-tab" data-toggle="pill" href="#pills-aq" role="tab" aria-controls="pills-aq" aria-selected="false">Air quality</a>
             </li>
