--- a/themes/dohmh/layouts/index.html
+++ b/themes/dohmh/layouts/index.html
@@ -7,9 +7,9 @@
         <div class="row">
           <div class="col-md-6 px-20">
             <div class="row px-2">
-              <h2 class="">Explore your city - through data</h2>
+              <h2 class="">Explore your city - through data.</h2>
               <p class="text-muted my-2">
-                <span class="font-weight-bold">The environment is everything around us:</span> our air and water, the climate, our city's buildings and streets, and the society that we live in:
+                <span class="font-weight-bold">The environment is everything around us</span> - our air and water, the climate, our city's buildings and streets, and the society that we live in:
               </p>
             </div>
 
@@ -105,20 +105,24 @@
                 <h3 class="text-black fs-xl pr-2 mb-2">Get updates and announcements</h3>
               </div>
               <div class="col-1">
-                <svg xmlns="http://www.w3.org/2000/svg" width="33.385" height="30.909"><g fill="#008939" fill-rule="nonzero"><path d="M24.275 3.09a35.413 35.413 0 0 1-16.76 4.207C3.365 7.297 0 10.79 0 15.102c0 3.978 2.865 7.261 6.568 7.745a31.92 31.92 0 0 0 2.388 6.52 2.715 2.715 0 0 0 3.853 1.151l1.627-.975c1.365-.819 1.767-2.579 1.106-3.945a23.973 23.973 0 0 1-.842-1.958 35.465 35.465 0 0 1 9.574 3.474 36.274 36.274 0 0 0 2.03-12.012c0-4.218-.717-8.264-2.03-12.011Z"/><path d="M26.45 2.117a39.148 39.148 0 0 1 2.32 13.338c0 4.696-.82 9.19-2.32 13.337l-.055.149c-.273.747.084 1.585.797 1.872.714.286 1.515-.087 1.789-.834a42.018 42.018 0 0 0 2.422-11.099c1.178-.646 1.982-1.937 1.982-3.425 0-1.49-.804-2.78-1.982-3.426A42.017 42.017 0 0 0 28.98.931C28.707.183 27.906-.19 27.192.096c-.713.287-1.07 1.125-.797 1.872l.055.15Z"/></g></svg>
+                <i class="fas fa-bullhorn h2 text-primary" aria-hidden="true"></i>
               </div>
             </div>
-            <p class="text-black mb-5"><a class="font-weight-bold" href="#">Sign up here!</a> We won't share your email address</p>
+            <p class="text-black mb-4"><a class="font-weight-bold" href="#">Sign up here!</a> We won't share your email address.</p>
           </div>
 
           <div class="shadow-sm mb-3 p-3 card-left-border">
             <div class="row no-gutters">
-              <div class="">
-                <h3 class="text-black fs-xl pr-2 mb-2">Search the site</h3>
+              <div class="col-11">
+                <h3 class="text-black fs-xl pr-2 mb-2">Find what you need</h3>
+              </div>
+              <div class="col-1">
+                <i class="fas fa-search h2 text-primary" aria-hidden="true"></i>
+
               </div>
             </div>
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#searchModal" class="btn nav-item-search d-none d-lg-block" title="Search">
-              Search
+            <button type="button" class="btn btn-primary btn-block mt-1" data-toggle="modal" data-target="#searchModal" class="btn nav-item-search d-none d-lg-block" title="Search">
+              <i class="fas fa-search mr-1" aria-hidden="true"></i>Search the site
             </button>
           </div>
         </div>
@@ -152,7 +156,7 @@
             </a>
             <div class="card-body">
               <h3 class="card-title">Neighborhood Reports</h3>
-              <p>Search for your neighborhood and get data</p>
+              <p>Search for your neighborhood and get data on top environmental health issues.</p>
               <div class="d-flex justify-content-end">
                 <a class="fs-sm font-weight-bold" href={{ relURL "neighborhood-reports" }}>Search here <i class="fas fa-arrow-circle-right ml-1" aria-hidden="true"></i></a>
               </div>
