--- a/themes/dohmh/layouts/partials/nr-indicator.html
+++ b/themes/dohmh/layouts/partials/nr-indicator.html
@@ -144,42 +144,36 @@
                 <table class="table">
                     <thead>
                       <tr>
-                        <th scope="col"  style="width:40%; border-top:none!important">&nbsp;</th>
-                        <th scope="col" style="border-top:none!important;"><span class="sr-only">{{ .data.measurement_type }} {{ .data.units }}</span></th>
+                        <th scope="col"  style="width:35%; border-top:none!important">&nbsp;</th>
                         <th scope="col"style="width:40%;"><span class="">{{ .data.measurement_type }} {{ .data.units }}</span></th>
                       </tr>
                     </thead>
                     <tbody>
                       <tr>
-                        <th scope="row"><span class="text-primary fs-xl">{{ .neighborhood }}</span></th>
-                        <td>
-                            <p class="indicator-value fs-xl font-weight-bold float-right text-primary">{{ .data.data_value_geo_entity }}</p>
-                        </td>
+                        <th scope="row"><span class="text-primary fs-xl float-right">{{ .neighborhood }} <span class="ml-2">{{ .data.data_value_geo_entity }}</span></span></th>
+
                         <td>
                             <div id="n-{{ urlize .data.indicator_short_name }}" style="width:90%;" class="compBar neighb">
                                 &nbsp;
+                                <span class="sr-only">{{ .data.data_value_geo_entity }}</span>
                             </div>
                         </td>
                       </tr>
                       <tr>
-                        <th scope="row"><span class="fs-xl">{{ .borough }}</span></th>
-                        <td>
-                            <span class="fs-xl float-right">{{ .data.data_value_boro }}</span>
-                        </td>
+                        <th scope="row"><span class="fs-xl float-right">{{ .borough }} <span class="ml-2">{{ .data.data_value_boro }}</span></span></th>
                         <td>
                             <div id="b-{{ urlize .data.indicator_short_name }}" style="width:90%;" class="compBar nonNeighb">
                                 &nbsp;
+                                <span class="sr-only">{{ .data.data_value_boro }}</span>
                             </div>
                         </td>
                       </tr>
                       <tr>
-                        <th scope="row"><span class="fs-xl">New York City</span></th>
-                        <td>
-                            <span class="fs-xl float-right">{{ .data.data_value_nyc }}</span>
-                        </td>
+                        <th scope="row"><span class="fs-xl float-right">New York City <span class="ml-2">{{ .data.data_value_nyc }}</span></span></th>
                         <td>
                             <div id="c-{{ urlize .data.indicator_short_name }}" style="width:90%;" class="compBar nonNeighb">
                                 &nbsp;
+                                <span class="sr-only">{{ .data.data_value_nyc }}</span>
                             </div>
                         </td>
                       </tr>
