--- a/themes/dohmh/layouts/data-stories/single.html
+++ b/themes/dohmh/layouts/data-stories/single.html
@@ -23,6 +23,19 @@
         <!--start main content section-->
         <div class="col-xl-8 overflow-hidden fs-rg" id="primary-content">
 
+        <div class="row mt-2">
+            <div class="col-12">
+                <nav aria-label="breadcrumb" class="border-top">
+                    <ul class="breadcrumb">
+                        <li class="breadcrumb-item"><a href={{ relURL "" }}>Home</a></li>
+                        <li class="breadcrumb-item"><a href={{ relURL "data-stories" }}>Data Stories</a></li>
+                        <li class="breadcrumb-item active"><a href="{{ .Page.RelPermalink }}">{{ .Title }}</a></li>
+
+                    </ul>
+                </nav>
+            </div>
+        </div>
+
         <!-- language selection -->
         {{- if .IsTranslated -}}
             <nav class="navbar navbar-default my-2">
