--- a/themes/dohmh/layouts/data-stories/bbb.html
+++ b/themes/dohmh/layouts/data-stories/bbb.html
@@ -16,6 +16,19 @@
 
 <article class="container-fluid" id="skip-header-target">
 
+    <div class="row mt-2">
+        <div class="col-12">
+            <nav aria-label="breadcrumb" class="border-top">
+                <ul class="breadcrumb">
+                    <li class="breadcrumb-item"><a href={{ relURL "" }}>Home</a></li>
+                    <li class="breadcrumb-item"><a href={{ relURL "data-stories" }}>Data Stories</a></li>
+                    <li class="breadcrumb-item active"><a href="{{ .Page.RelPermalink }}">{{ .Title }}</a></li>
+
+                </ul>
+            </nav>
+        </div>
+    </div>
+
     <div class="row">
         <div class="col-xl-2"></div>
         <!-- .col -->
