fix mobile search

--- a/themes/dohmh/layouts/key-topics/section.html
+++ b/themes/dohmh/layouts/key-topics/section.html
@@ -17,7 +17,7 @@
         <div class="row">
             <div class="col-md-8 col-sm-12 my-4">
 
-                <h1><i class="fas fa-star" aria-hidden="true" style="margin-right: 10px"></i>Key Topics in Environmental Health</h1>
+                <h1><i class="fas fa-star mr-1" aria-hidden="true"></i>Key Topics in Environmental Health</h1>
                 <p>{{- .Content -}}</p>
             </div>
         </div>
