--- a/themes/dohmh/layouts/partials/header.html
+++ b/themes/dohmh/layouts/partials/header.html
@@ -100,12 +100,10 @@
                                 </li>
 
                                 <li>
-                                    <button class="no-btn-style" type="button" title="Search" data-toggle="collapse"
-                                        data-target="#global-search" aria-controls="global-search"
-                                        aria-expanded="false">
+                                    <a class="nav-link" href="#" type="button" data-toggle="modal" data-target="#searchModal" title="Search" data-toggle="collapse">
                                         <span class="sr-only">Search</span>
-                                        <span class="fas fa-search text-white fa-lg" ></span>
-                                    </button>
+                                        <i class="fa fa-magnifying-glass text-white"></i>
+                                    </a>
                                 </li>
                             </ul>
 
