--- a/themes/dohmh/layouts/key-topics/single.html
+++ b/themes/dohmh/layouts/key-topics/single.html
@@ -25,10 +25,10 @@
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-lg-10 col-md-12 mx-auto kt-accent">
-                <h1 class="greenfill h2" data-pagefind-weight="10.0">
-                    <i class="fas fa-star" aria-hidden="true" style="margin-right: 10px"></i>{{ .Title }}
+        <div class="row key-topics">
+            <div class="col-lg-10 col-md-12 mx-auto">
+                <h1 class="h2" data-pagefind-weight="10.0">
+                    <i class="fas fa-star mr-1" aria-hidden="true"></i>{{ .Title }}
                 </h1>
             </div>
         </div>
@@ -49,7 +49,7 @@
         <div class="row mt-4">
             <div class="col-lg-10 col-md-12 mx-auto">
                 <div class="row">
-                    <div class="col">
+                    <div class="col key-topics">
                         <div>
                             <span class="h3 fs-lg"><i class="fas fa-chart-bar mr-1" aria-hidden="true"></i>Data Features:</span> <span class="home-label">Reports and interactives</span>
                         </div>
