--- a/themes/dohmh/layouts/data-explorer/single.html
+++ b/themes/dohmh/layouts/data-explorer/single.html
@@ -221,7 +221,7 @@
 
 <article class="container-fluid" id="skip-header-target">
     <div class="row">
-        <div class="col-12 mt-4">
+        <div class="col-12 mt-4 border-top">
             <nav aria-label="breadcrumb" class="mb-2">
                 <ul class="breadcrumb mr-auto">
                     <li class="breadcrumb-item"><a href={{ relURL "" }}>Home</a></li>
