add table header

--- a/themes/dohmh/layouts/partials/nr-indicator.html
+++ b/themes/dohmh/layouts/partials/nr-indicator.html
@@ -144,8 +144,8 @@
                 <table class="table">
                     <thead>
                       <tr>
-                        <th scope="col"  style="width:35%; border-top:none!important">&nbsp;</th>
-                        <th scope="col"style="width:40%;"><span class="">{{ .data.measurement_type }} {{ .data.units }}</span></th>
+                        <th scope="col"  style="border-top:none!important"><span class="sr-only">Location:</span></th>
+                        <th scope="col"style="width:35%;"><span class="">{{ .data.measurement_type }} {{ .data.units }}</span></th>
                       </tr>
                     </thead>
                     <tbody>
