column spacing tweak

--- a/themes/dohmh/layouts/index.html
+++ b/themes/dohmh/layouts/index.html
@@ -132,8 +132,11 @@
     </div>
 
     <div class="container wide">
-      <h3>Tools</h3>
-      <div class="row mt-4 mb-2 justify-content-center mx-auto">
+      <div class="row">
+        <div class="col-12 mb-2">
+          <h3 class="mb-2">Explore tools</h3>
+        </div>
+
         <div class="col-lg-4 col-sm-10 card content-card">
           <div class="card-content data-stories mb-4">
             <a class="position-relative" href={{ relURL "data-stories" }}>
@@ -181,6 +184,8 @@
             </div>
           </div>
         </div>
+
+
       </div>
     </div>
 
