featured link image

--- a/themes/dohmh/layouts/index.html
+++ b/themes/dohmh/layouts/index.html
@@ -38,10 +38,12 @@
           <div class="col-md-6 px-20">
             <div class="card content-card">
               <div class="card-content primary">
+                <a href="{{ relURL .Params.featured_link }}">
                 <div class="position-relative" style='height: 330px; width: 100%; background-image: url({{ relURL ( urls.JoinPath "images" .Params.featured_image ) }}); background-position: center; background-size: cover;'>
                   <div class="overlay-trends">
                     <!-- Can use overlay-trends, overlay-map or overlay-topics -->
                   </div>
+                </a>
                 </div>
                 <div class="card-body">
                   <h3><a href="{{ relURL .Params.featured_link }}">{{ .Params.featured_title }}</a></h3>
