home, kt, df landings

--- a/themes/dohmh/layouts/index.html
+++ b/themes/dohmh/layouts/index.html
@@ -157,9 +157,9 @@
 
         <div class="col-lg-3 col-sm-6">
           <div class="card content-card">
-            <div class="card-content key-topics mb-4">
-              <a class="position-relative" href={{ relURL "data-explorer" }}>
-                <div class="tab-key-topics h-100 w-100 position-absolute"></div>
+            <div class="card-content data-features mb-4">
+              <a class="position-relative" href={{ relURL "data-features" }}>
+                <div class="tab-data-features h-100 w-100 position-absolute"></div>
                 <img class="card-img-top" src={{ relURL "images/image_key_topics.jpg" }}>
               </a>
               <div class="card-body">
