--- a/themes/dohmh/layouts/data-features/section.html
+++ b/themes/dohmh/layouts/data-features/section.html
@@ -1,7 +1,7 @@
 {{- define "main" -}}
 
 <article id="skip-header-target">
-<div class="container-fluid">
+<div class="container-fluid data-features">
     <div class="row">
         <div class="col-md-10 mx-auto mt-4">
             <nav aria-label="breadcrumb" class="mb-2">
@@ -10,7 +10,7 @@
                     <li class="breadcrumb-item active"><a href="/data-features/">Data Features</a></li>
                 </ul>
               </nav>
-            <h1 class="text-secondary mt-2"><i class='fas fa-chart-bar mr-1' aria-hidden='true'></i>Data Features</h1>
+            <h1 class="mt-2"><i class='fas fa-chart-bar mr-1' aria-hidden='true'></i>Data Features</h1>
             <p>Interactive infographics, real-time data feeds, and annual reports on important environmental health topics.</p>
 
 
