--- a/themes/dohmh/layouts/key-topics/single.html
+++ b/themes/dohmh/layouts/key-topics/single.html
@@ -50,7 +50,7 @@
             <div class="col-lg-10 col-md-12 mx-auto">
                 <div class="row">
                     <div class="col">
-                        <div class="">
+                        <div class="df-accent">
                             <span class="h3 fs-lg"><i class="fas fa-chart-bar mr-1 key-topics" aria-hidden="true"></i>Data Features:</span> <span class="home-label">Interactive infographics and reports</span>
                         </div>
                     </div>
