--- a/themes/dohmh/layouts/data-features/aqe.html
+++ b/themes/dohmh/layouts/data-features/aqe.html
@@ -9,8 +9,7 @@
             <nav aria-label="breadcrumb" class="mb-4">
                 <ul class="breadcrumb">
                     <li class="breadcrumb-item"><a href={{ relURL "" }}>Home</a></li>
-                    <li class="breadcrumb-item"><a href={{ relURL "key-topics" }}>Key Topics</a></li>
-                    <li class="breadcrumb-item"><a href={{ relURL "key-topics/airquality" }}>Air Quality</a></li>
+                    <li class="breadcrumb-item"><a href={{ relURL "data-features" }}>Data Features</a></li>
                     <li class="breadcrumb-item active" aria-current="page">{{ .Title }}</li>
                 </ul>
             </nav>
@@ -226,7 +225,7 @@
                     <h5>NYCCAS Annual Report</h5>
                     <p class="fs-md">Key findings from NYC's comprehensive air quality monitoring program, including pollutant trends and local sources.</p>
 
-                    <p class="fs-md"><a href={{ relURL "key-topics/airquality/nyccas" }}>Read more ></a> </p>
+                    <p class="fs-md"><a href={{ relURL "data-features/nyccas" }}>Read more ></a> </p>
                 </div>
 
             </div>
