--- a/themes/dohmh/layouts/data-features/nyccas-report.html
+++ b/themes/dohmh/layouts/data-features/nyccas-report.html
@@ -33,9 +33,7 @@
             <nav aria-label="breadcrumb" class="mb-4">
                 <ul class="breadcrumb">
                     <li class="breadcrumb-item"><a href={{ relURL "" }}>Home</a></li>
-                    <li class="breadcrumb-item"><a href={{ relURL "key-topics" }}>Key Topics</a></li>
-                    <li class="breadcrumb-item"><a href="..">
-                        {{- with .Parent -}} {{ .Title }} </a></li>{{- end -}}
+                    <li class="breadcrumb-item"><a href={{ relURL "data-features" }}>Data Features</a></li>
                     <li class="breadcrumb-item active" aria-current="page">{{ .Title }}</li>
                 </ul>
             </nav>
