--- a/themes/dohmh/layouts/data-features/section.html
+++ b/themes/dohmh/layouts/data-features/section.html
@@ -21,25 +21,27 @@
                     {{ range where .Pages "Params.hide" "ne" true }}
 
                         {{- if and (not (.Params.report)) (not (.Params.externalPortal))  -}}
-                        <div class="card content-card mb-4 col-sm-6 col-md-3">
-                            <div class="card-content card-body">
+                        <div class="card content-card mb-4 col-sm-6 col-md-4">
+                            <div class="card-content data-features">
                                 {{- if .Params.image -}}
+                                <a href="{{ .RelPermalink}}">
                                     {{ $src := .Resources.GetMatch .Params.image }}
-                                    
-                    
                                     {{ $image := $src.Resize "740x"}}
-                                    <a class="" href="{{ .RelPermalink }}">
-                                    <div style="width:100%; height:150px; background-image: URL({{ $image.Permalink }}); background-size: cover"></div></a>
+                                    <div style="width:100%; height:250px; background-image: url({{ $image.RelPermalink }}); background-size:cover"></div>
+                                </a>
                                 {{- else -}}
-                                    <a class="" href="{{ .RelPermalink }}">
-                                    <div style="width:100%; height:150px; background-image: URL('{{ .Site.BaseURL }}/images/home-sample-image-DE-5.png'); background-size: cover"></div></a>
-                                    
+                                <a class="" href="{{ .RelPermalink }}">
+                                <div style="width:100%; height:250px; background-image: URL('{{ .Site.BaseURL }}/images/home-sample-image-DE-5.png'); background-size: cover"></div></a>
+                                
                                 {{- end -}}
-                                <h4 class="fs-md mt-1"><a class="" href="{{ .RelPermalink }}" class="text-primary">{{ .Title }}</a></h4>
-                                <p class="fs-sm">{{ .Content | plainify | truncate 175 | htmlUnescape }}
-                                </p>
-                                <p class="fs-sm text-primary float-right mb-1"><a class="" href="{{ .RelPermalink }}">Get the data... <i
-                                    class="fas fa-arrow-circle-right"></i></a></p>
+            
+                                <div class="card-body">
+                                    <h3 class="h5"><a class="text-black" href="{{ .RelPermalink }}" class="text-primary">{{ .Title }}</a></h3>
+                                    <div class="mb-2">{{ .Content | truncate 150 }}</div>
+                                    <div class="d-flex justify-content-end link">
+                                        <a class="fs-sm font-weight-bold" href="{{ .RelPermalink }}">Get the data</a>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         {{- end -}}
@@ -58,24 +60,26 @@
     
                             {{- if .Params.report -}}
                             <div class="card content-card mb-4 col-sm-6 col-md-3">
-                                <div class="card-content card-body">
+                                <div class="card-content data-features">
                                     {{- if .Params.image -}}
+                                    <a href="{{ .RelPermalink}}">
                                         {{ $src := .Resources.GetMatch .Params.image }}
-                                        
-                        
                                         {{ $image := $src.Resize "740x"}}
-                                        <a class="" href="{{ .RelPermalink }}">
-                                        <div style="width:100%; height:150px; background-image: URL({{ $image.Permalink }}); background-size: cover"></div></a>
+                                        <div style="width:100%; height:250px; background-image: url({{ $image.RelPermalink }}); background-size:cover"></div>
+                                    </a>
                                     {{- else -}}
-                                        <a class="" href="{{ .RelPermalink }}">
-                                        <div style="width:100%; height:150px; background-image: URL('{{ .Site.BaseURL }}/images/home-sample-image-DE-5.png'); background-size: cover"></div></a>
-                                        
+                                    <a class="" href="{{ .RelPermalink }}">
+                                    <div style="width:100%; height:250px; background-image: URL('{{ .Site.BaseURL }}/images/home-sample-image-DE-5.png'); background-size: cover"></div></a>
+                                    
                                     {{- end -}}
-                                    <h4 class="fs-md mt-1"><a class="" href="{{ .RelPermalink }}" class="text-primary">{{ .Title }}</a></h4>
-                                    <p class="fs-sm">{{ .Content | plainify | truncate 175 | htmlUnescape }}
-                                    </p>
-                                    <p class="fs-sm text-primary float-right mb-1"><a class="" href="{{ .RelPermalink }}">Get the data... <i
-                                        class="fas fa-arrow-circle-right"></i></a></p>
+                
+                                    <div class="card-body">
+                                        <h3 class="h5"><a class="text-black" href="{{ .RelPermalink }}" class="text-primary">{{ .Title }}</a></h3>
+                                        <div class="mb-2 fs-sm">{{ .Content | plainify | truncate 150 }}</div>
+                                        <div class="d-flex justify-content-end link">
+                                            <a class="fs-sm font-weight-bold" href="{{ .RelPermalink }}">Get the data</a>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             {{- end -}}
@@ -110,8 +114,7 @@
                                     <h4 class="fs-md mt-1"><a class="" href="{{ .RelPermalink }}" class="text-primary">{{ .Title }}</a></h4>
                                     <p class="fs-sm">{{ .Content | plainify | truncate 175 | htmlUnescape }}
                                     </p>
-                                    <p class="fs-sm text-primary float-right mb-1"><a class="" href="{{ .RelPermalink }}">Get the data... <i
-                                        class="fas fa-arrow-circle-right"></i></a></p>
+                                    <p class="fs-sm text-primary float-right mb-1"><a class="font-weight-bold float-right" href="{{ .RelPermalink }}">Get the data</a></p>
                                 </div>
                             </div>
                             {{- end -}}
