--- a/themes/dohmh/layouts/index.html
+++ b/themes/dohmh/layouts/index.html
@@ -202,7 +202,7 @@
               </a>
               <div class="card-body">
                 <h3 class="card-title">Data Explorer</h3>
-                <p>Maps, trends, tables, and more: get datasets on hundreds of topics.</p>
+                <p>Maps, trends, tables, and more: datasets on hundreds of topics.</p>
                 <div class="d-flex justify-content-end">
                   <a class="fs-sm font-weight-bold" href={{ relURL "data-explorer" }}>Get data <i class="fas fa-arrow-circle-right ml-1" aria-hidden="true"></i></a>
                 </div>
