--- a/themes/dohmh/layouts/index.html
+++ b/themes/dohmh/layouts/index.html
@@ -146,7 +146,7 @@
               </a>
               <div class="card-body">
                 <h3 class="card-title">Data stories</h3>
-                <p>Perspectives and explainers on important health issues.</p>
+                <p>Explainers on important health issues.</p>
                 <div class="d-flex justify-content-end">
                   <a class="fs-sm font-weight-bold" href={{ relURL "data-stories" }}>All data stories<i class="fas fa-arrow-circle-right ml-1" aria-hidden="true"></i></a>
                 </div>
@@ -164,7 +164,7 @@
               </a>
               <div class="card-body">
                 <h3 class="card-title">Data Features</h3>
-                <p>Custom interactives and reports on important topics.</p>
+                <p>Custom interactives, dashboards and reports.</p>
                 <div class="d-flex justify-content-end">
                   <a class="fs-sm font-weight-bold" href={{ relURL "data-features" }}>Get data <i class="fas fa-arrow-circle-right ml-1" aria-hidden="true"></i></a>
                 </div>
@@ -182,7 +182,7 @@
               </a>
               <div class="card-body">
                 <h3 class="card-title">Neighborhood Reports</h3>
-                <p>Search for your neighborhood and get data on key issues.</p>
+                <p>Data on key neighborhood issues.</p>
                 <div class="d-flex justify-content-end">
                   <a class="fs-sm font-weight-bold" href={{ relURL "neighborhood-reports" }}>Search here <i class="fas fa-arrow-circle-right ml-1" aria-hidden="true"></i></a>
                 </div>
@@ -202,7 +202,7 @@
               </a>
               <div class="card-body">
                 <h3 class="card-title">Data Explorer</h3>
-                <p>Maps, trends, tables, and more: datasets on hundreds of topics.</p>
+                <p>Maps, trends, tables, and more: hundreds of datasets.</p>
                 <div class="d-flex justify-content-end">
                   <a class="fs-sm font-weight-bold" href={{ relURL "data-explorer" }}>Get data <i class="fas fa-arrow-circle-right ml-1" aria-hidden="true"></i></a>
                 </div>
